--- a/src/components/Field/numericField.scss
+++ b/src/components/Field/numericField.scss
@@ -61,6 +61,8 @@
 
         > .#{vars.$prefix}spin-down,
         > .#{vars.$prefix}spin-up {
+          --#{vars.$prefix}btn-border-radius: .25rem;
+
           height: 1.125rem; // 18px;
           width: 1.5rem;
 
